// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookコンポートにてステータスによる変化をテストする 貸出中だと背景色が黒 1`] = `
.c0 {
  cursor: pointer;
  display: inline-block;
  width: 150px;
  height: 220px;
  position: relative;
  background: black;
  z-index: 1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1),0 9px 20px 0 rgba(0,0,0,0.25);
  overflow: hidden;
  -webkit-transition: box-shadow 0.2s linear;
  transition: box-shadow 0.2s linear;
}

.c0 img {
  width: inherit;
  height: inherit;
  -webkit-transform-origin: 0 50%;
  -ms-transform-origin: 0 50%;
  transform-origin: 0 50%;
  -webkit-transform: rotateY(0);
  -ms-transform: rotateY(0);
  transform: rotateY(0);
  -webkit-transition: all 0.45s ease;
  transition: all 0.45s ease;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25), 0 9px 20px 0 rgba(0,0,0,0.45);
}

.c0:hover img {
  -webkit-transform: rotateY(-50deg);
  -ms-transform: rotateY(-50deg);
  transform: rotateY(-50deg);
  box-shadow: 1px 3px 5px 5px rgba(0,0,0,0.2);
}

.c0::after,
.c0::before {
  content: "";
  display: block;
  width: inherit;
  height: inherit;
  position: absolute;
  z-index: -1;
  top: 0;
  background: white;
  border: 1px solid #d9d9d9;
}

.c0::before {
  left: -3px;
}

.c0::after {
  left: -6px;
}

<div
  className="c0"
>
  <img
    alt="日和の書"
    src="https://eiga.k-img.com/images/person/48809/636e0909e3853484/320.jpg?1487241318"
  />
</div>
`;

exports[`Bookコンポートにてステータスによる変化をテストする 貸出中以外だと背景色は白 1`] = `
.c0 {
  cursor: pointer;
  display: inline-block;
  width: 150px;
  height: 220px;
  position: relative;
  background: white;
  z-index: 1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1),0 9px 20px 0 rgba(0,0,0,0.25);
  overflow: hidden;
  -webkit-transition: box-shadow 0.2s linear;
  transition: box-shadow 0.2s linear;
}

.c0 img {
  width: inherit;
  height: inherit;
  -webkit-transform-origin: 0 50%;
  -ms-transform-origin: 0 50%;
  transform-origin: 0 50%;
  -webkit-transform: rotateY(0);
  -ms-transform: rotateY(0);
  transform: rotateY(0);
  -webkit-transition: all 0.45s ease;
  transition: all 0.45s ease;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25), 0 9px 20px 0 rgba(0,0,0,0.45);
}

.c0:hover img {
  -webkit-transform: rotateY(-50deg);
  -ms-transform: rotateY(-50deg);
  transform: rotateY(-50deg);
  box-shadow: 1px 3px 5px 5px rgba(0,0,0,0.2);
}

.c0::after,
.c0::before {
  content: "";
  display: block;
  width: inherit;
  height: inherit;
  position: absolute;
  z-index: -1;
  top: 0;
  background: white;
  border: 1px solid #d9d9d9;
}

.c0::before {
  left: -3px;
}

.c0::after {
  left: -6px;
}

<div
  className="c0"
>
  <img
    alt="日和の書"
    src="https://eiga.k-img.com/images/person/48809/636e0909e3853484/320.jpg?1487241318"
  />
</div>
`;
